bad/add_invalid_types_class_void.example_compiler_output
ERROR
[1mbad/add_invalid_types_class_void.lat:8:4: [1;31merror: [0;1maddition is defined only for int values or string values, not `X` and `void`[m
	x + foo();
	  [1;32m^[m
